--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@ $grid.imagesLoaded().progress( function() {
 </head>
 <body>
 
-    <div class="logo">
-      <img src="images/Windgaze_small.png">
+    <div class="header">
+      <a href="index.html" class="logo"><img src="images/Windgaze_small.png"></a>
+      <div class="header-right">
+        <a class="active" href="#home">Works</a>
+        <a href="about.html">About</a>
+        <a href="https://windgaze.bigcartel.com/"  target="_blank">Shop</a>
+      </div>
     </div>
+
 
 <div class="grid">
   <!-- width of .grid-sizer used for columnWidth -->
@@ -57,16 +63,19 @@ $grid.imagesLoaded().progress( function() {
   <div class="grid-item">
     <img src="images/jewel.jpg" />
   </div>
-  
+
   <div class="grid-item">
     <img src="images/Emerald-hill.jpg" />
   </div>
-  
-  
+
 </div>
-
-
-
-
+<!--
+<div class="footer">
+  <div class="footer-text">
+      Follow me on: <a href="https://www.instagram.com/windgaze" target="_blank"><img src="images/ig_logo.png"></a>
+  </div>
+</div>-->
 </body>
+
+
 </html>
